# csfd-export

./: .editorconfig  .gitignore  Makefile  NOTICE  README.md  manage.py  pyproject.toml
csfd_export/: __init__.py  asgi.py  cli.py  forms.py  scraper.py  settings.py  settings_prod.py  settings_prod_ssl.py  tasks.py  urls.py  views.py
csfd_export/static/csfd_export/: main.css  main.js
csfd_export/templates/: 404.html  index.html
csfd_export/templates/users/: detail.html
csfd_export/tests/: test_scraper.py
csfd_export/tests/test_data/: hodnoceni-2024.html  hodnoceni-2026.html  ratings.html
