[tool.poetry]
name = "csfd-export"
version = "1.0.1"
description = "A website that allows you to export your ČSFD film ratings."
authors = ["Jakub Valenta <jakub@jakubvalenta.cz>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
celery = {extras = ["redis"], version = "^5.4.0"}
django-ratelimit = "^4.1.0"
django = "^5.0.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"
types-beautifulsoup4 = "^4.12.0.20240907"
types-requests = "^2.31.0"
ruff = "^0.7.0"

[tool.poetry.scripts]
csfd-export = "csfd_export.cli:main"

[tool.ruff]
extend-exclude = ["migrations"]
line-length = 100

[tool.ruff.lint]
select = ["C90", "D", "DJ", "E", "F", "I", "N", "PT"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D211", "D212", "PT009"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
